# SentimentAnalyser

./: Makefile  README.md  docker-compose.yml
app/: .env.example  .gitignore  bun.lockb  drizzle.config.ts  package.json
app/src/: env.js  middleware.ts
app/src/app/: layout.tsx  page.tsx
app/src/app/_components/pages/dashboard/: email-edge.tsx  email-node.tsx  logoutButton.tsx  navbarItems.tsx
app/src/app/_components/pages/landing/: navbar.tsx
app/src/app/_components/ui/: input.tsx  sidebar.tsx  tooltip.tsx
app/src/app/dashboard/: layout.tsx  loading.tsx  page.tsx
app/src/app/dashboard/graphs/: page.tsx
app/src/app/login/: layout.tsx  page.tsx
app/src/lib/: auth-client.ts  colours.ts  types.ts  utils.ts
app/src/server/api/: root.ts  trpc.ts
app/src/server/api/routers/: graph.ts  searches.ts
app/src/server/auth/: index.ts
app/src/server/db/: index.ts  schema.ts
app/src/server/neo4j/: index.ts
app/src/styles/: globals.css
app/src/trpc/: react.tsx
data_pipeline/: .env.example  .gitignore  Cargo.toml  main.py  requirements.txt
data_pipeline/src/: main.rs
data_pipeline/src/utils/: csv.rs  data_parser.rs  emails.rs  logger.rs  mod.rs  neo4j.rs  sentiment.rs  text.rs
data_pipeline/utils/: emails.py  model.py  neo4j.py  tokenize.py
training_model/: .gitignore  main.py  requirements.txt  run_model.py
training_model/emails/: clean_emails.py  find_model_params.py  label_emails.py  train.py
training_model/reviews/: clean_dataset.py  eda.py  find_model_params.py  train.py
training_model/tests/: test.py
training_model/utils/: utils.py
(+2 files in other folders)
